--- a/.github/workflows/main_week-4-auth-server.yml
+++ b/.github/workflows/main_week-4-auth-server.yml
@@ -22,10 +22,14 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          rm -rf test
+          rm -rf src
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -53,7 +57,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -68,4 +72,3 @@ jobs:
           app-name: 'week-4-auth-server'
           slot-name: 'Production'
           package: .
-          
